fixes dark mode label styling

--- a/tsundoku/blueprints/ux/static/css/themes/dark.scss
+++ b/tsundoku/blueprints/ux/static/css/themes/dark.scss
@@ -23,6 +23,7 @@ body.dark .table thead tr th,
 body.dark .modal-card-title,
 body.dark .menu-list li > a,
 body.dark span,
+body.dark label,
 body.dark p {
   color: $white;
 }
